force-app/main/objects/Course_Certificate_LanguageTranslation__mdt.object
<CustomObject>
    <description>Map between Course Delivery Language, Certificate Language and Certificate text Translations</description>
    <fields>
        <fullName>Delivery_Language__c</fullName>
        <description>Course Delivery Language</description>
        <label>Delivery Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin/Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese/Traditional)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Brazilian Portuguese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Placeholder__c</fullName>
        <label>Text Placeholder</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ReplaceCertificateTitle_Label</fullName>
                    <default>true</default>
                    <label>ReplaceCertificateTitle_Label</label>
                </value>
                <value>
                    <fullName>ReplaceCertifyThat_Label</fullName>
                </value>
                <value>
                    <fullName>ReplaceSuccessfullyCompleted_Label</fullName>
                </value>
                <value>
                    <fullName>ReplaceAppropriateTraining_Label</fullName>
                </value>
                <value>
                    <fullName>ReplaceResgistrationNumber_Label</fullName>
                </value>
                <value>
                    <fullName>ReplaceTermsConditions_Label</fullName>
                </value>
                <value>
                    <fullName>ReplaceRightsReserved_Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Value_Translated__c</fullName>
        <label>Text Value Translated</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Course Certificate LanguageTranslation</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>MasterLabel</columns>
        <columns>Delivery_Language__c</columns>
        <columns>Text_Placeholder__c</columns>
        <columns>Text_Value_Translated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Course Certificate LanguageTranslations</pluralLabel>
</CustomObject>